# Team-Cloud-9

./: .gitignore  .gitmodules  README.md  README2.md  pyproject.toml  test_main.http
.github/: pull_request_template.md
app/: exceptions.py  main.py
app/core/: config.py
app/db/: session.py
app/domains/courses/: crud.py  routers.py  schemas.py
app/domains/departments/: models.py
backend/: .env  .gitignore  Dockerfile  README.md  backend-test.yaml  fastapi_schema.sql  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  security.py
backend/app/db/: session.py
backend/app/domains/common/: crud.py  routers.py  schemas.py
backend/app/domains/courses/: crud.py  models.py  routers.py  schemas.py
backend/app/domains/departments/: models.py
backend/app/domains/grafana/: crud.py  routers.py
backend/app/domains/loadtest/: routers.py
backend/app/domains/professors/: models.py
backend/app/domains/registrations/: crud.py  models.py  routers.py  schemas.py
backend/app/domains/students/: models.py  routers.py  schemas.py
backend/app/domains/users/: crud.py  models.py  routers.py  schemas.py
backend/tests/: test_routers.py
cluster/: README.md  TODO.md  embedded_grafana_graph.md
cluster/deploy/: .env.backend  .env.frontend  backend.yaml  frontend.yaml
cluster/tests/: Dockerfile  prom_config.yaml  test.py
doc/: kubernetes_study.md
frontend/sugang-system/: .gitignore  Dockerfile  README.md  dockerfile  package-lock.json  package.json  structure.txt
login-test/: package-lock.json  package.json  server.js
(+20 files in other folders)
